Java Backend: Recipes - refactor